# yumi_follow_trajectory

./: CMakeLists.txt  LICENSE  README.md  package.xml
scripts/: waypoint_to_trajectory.py
src/: follow_joint_trajectory.cpp  yumi_pushing.cpp
