<?xml version="1.0"?>
<package format="2">
  <name>yumi_follow_trajectory</name>
  <version>1.0.0</version>
  <description>The yumi_follow_trajectory package</description>
  <maintainer email="ali.ghadirzadeh@gmail.com">Ali</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_wrapper</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>kdl_wrapper</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>kdl_wrapper</exec_depend>  
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
